--- a/templates/index.html
+++ b/templates/index.html
@@ -94,6 +94,7 @@
               type="text"
               placeholder="0.0"
               name="amount"
+              id="aavn"
               required
             />‎ ‎
             <div class="select is-rounded">
@@ -109,8 +110,8 @@
         <div class="control">
           <!--Make a text area with a rounded dropdown menu on the side of it-->
           <nav class="level">
-            <div class="box">
-              <p class="is-3" id="amt2"><strong id="amt"></strong></p>
+            <div class="box level">
+              <p class="is-3" id="amt2"><strong id="amt">Select Trade Option</strong>&nbsp;<p class="is-6" id="amt3"></p></p>
             </div>
             <div class="select is-rounded">
               <select name="asset1" class="assets">
@@ -125,6 +126,23 @@
                 $("select.assets").change(function(){
                     var selectedValue = $(this).children("option:selected").val();
                     document.getElementById("amt").innerText = ''
+                    httpreq = new XMLHttpRequest();
+                    httpreq.open('GET', '/price/' + selectedValue, true);
+                    // on open change the inner text to the response
+              
+                            //document.getElementById("amt").innerText = httpreq.responseText;
+                            //document.getElementById("amt2").innerText = '1 ' + selectedValue + ' = ' + httpreq.responseText + ' AVN';
+                            // get the value of the amount input
+                      $("#aavn").on("input propertychange past", function () {
+                        var amount = document.getElementById("aavn").value;
+                        console.log(amount);
+                        if (amount == '') {
+                            amount = 0;
+                        }
+                        document.getElementById("amt").innerText = (parseInt(httpreq.responseText)*parseInt(amount)).toString() + " " + selectedValue;
+                        document.getElementById("amt3").innerText =' ≈ ' + (parseInt(amount)).toString() + ' AVN';
+                      });
+                    httpreq.send();
                 });
             });
           </script>
