--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
             <div class="select is-rounded">
               <select name="asset1" class="assets">
                 {% for asset in assets %}
-                <option value="{{ asset[0] }}" >{{ asset[0] }}</option>
+                <option value="{{ asset }}" >{{ asset }}</option>
                 {% endfor %}
               </select>
             </div>
