--- a/templates/index.html
+++ b/templates/index.html
@@ -59,6 +59,9 @@
 {% else %}
 <header class="has-background-primary">
     <nav class="level-right is-centered" style="margin-right: 10px">
+      <p class="has-text-gray">
+        On Block: {{blockcount[0]}}
+      </p>
       <button class="button is-rounded is-outlined js-modal-trigger" style="margin: 10px" data-target="">
         Wallet Connected!
       </button>
